added optional parameters in the search engine
