# app/controllers/api/v1/movies_controller.rb
@@ -1,16 +1,19 @@
+# frozen_string_literal: true
+
 module Api
   module V1
     class MoviesController < ApplicationController
       def index
-        movies = Tmdb::Handler.get('movie', movie_params[0])
+        movies = Tmdb::Handler.get('movie', movie_params )
         render json: movies, status: :ok
       end
-    
+
       private
-    
+
       def movie_params
         params.required(:name)
+        params.permit(%i[name include_adult language primary_release_year page region year])
       end
-    end    
+    end
   end
 end
